--- a/public/custom.css
+++ b/public/custom.css
@@ -10,8 +10,8 @@ body {
 }
 
 #sticky-nav {
-    background-color: rgba(0, 0, 0, 0.2) !important; /* 极浅的底色 */
-    backdrop-filter: blur(10px) saturate(160%) !important; /* 这里调高模糊实现亚克力 */
+    background-color: rgba(0, 0, 0, 0.2) !important;
+    backdrop-filter: blur(10px) saturate(160%) !important;
     -webkit-backdrop-filter: blur(10px) saturate(160%) !important;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -38,4 +38,10 @@ footer {
 footer * {
     color: rgba(255, 255, 255, 0.8) !important;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+#theme-hexo .post-title, 
+#theme-hexo .post-meta {
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
+    color: #fff !important;
 }
