--- a/public/custom.css
+++ b/public/custom.css
@@ -62,3 +62,24 @@ footer * {
 .dark #sticky-nav, .dark footer {
     background-color: rgba(0, 0, 0, 0.5) !important;
 }
+
+#theme-hexo #post-wrapper,
+.side-card,
+#theme-hexo .post-card {
+    background-color: rgba(255, 255, 255, 0.85) !important;
+    
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+#theme-hexo #post-wrapper {
+    margin-top: -20px !important; 
+    
+    box-shadow: 0 -5px 20px rgba(0, 0, 0, 0.1) !important;
+    
+    position: relative;
+    z-index: 10;
+}
